k8s/loja/loja.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
        version: "1.0"
    spec:
      containers:
        - name: shop
          image: wesleywillians/maratonafc3-shop
          ports:
            - containerPort: 3000
          volumeMounts:
          - name: shop-conf
            subPath: .env
            mountPath: /home/node/app/.env

      volumes:
      - name: shop-conf
        configMap:
          name: shop-conf
          items:
            - key: env
              path: .env
                
---

apiVersion: v1
kind: Service
metadata:
  name: shop-service
  labels:
    app: shop
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http-svc
      port: 3000
  selector:
    app: shop

---
  
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shop-vs
spec:
  hosts:
  - "*"
  gateways:
  - admin-gateway
  http:
  - name: "shop"
    match:
    - uri:
        prefix: /
      port: 80
    route:
    - destination:
        port:
          number: 3000
        host: shop-service
